W! First web page

--- a/w1/index.html
+++ b/w1/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hello World! </h1>
+    <div>
+    
+        <h1>Kevin Andrade</h1>
+        <p>I am 22 Years old, Born and raised in <b>Danbury CT</b>. Out side of NEIT I run a business with my parents. We have a nightclub/restaurant called <u>La Canchita</u> and have been in business for about 5 years. Other than school and work I Like to play vide games and hang out with dog Dima. He is a 2 year old all <i>White Siberian Husky</i> and is too smart for his own good. </p>
+    </div>
+
 </body>
 </html>
