--- a/w9/index.html
+++ b/w9/index.html
@@ -23,12 +23,21 @@
 		{first:"Buzz", last:"Lightyear", credit:"Toy Story" },
 		{first:"Marion", last:"Cobretti", credit:"Cobra" }
 	]
-	var output = ``
+	var body = document.querySelector(`body`)
+
+
 	for(let i = 0; i < people.length; i++){
-		var tempDiv = document.createElement()
+		var tempDiv = document.createElement(`div`)
+		tempDiv.setAttribute(`id`, i)
+		tempDiv.setAttribute(`class`, `border`)
 		for(key in people[i]){
-			output +=
+			var p = document.createElement(`p`)
+			var text = document.createTextNode(people[i][key])
+			p.appendChild(text)
+			tempDiv.appendChild(p)
+			console.log(tempDiv)
 		}
+		body.appendChild(tempDiv)
 	}
 	
 </script>
